--- a/hackathonvolunteer-logindiscord.html
+++ b/hackathonvolunteer-logindiscord.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Volunteer Login • Code Crunch</title>
+  <title>Volunteer Discord Login • Code Crunch</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
 
   <style>
@@ -136,9 +136,9 @@
   <main class="container">
     <!-- Header -->
     <section class="header">
-      <h1>Volunteer Login</h1>
+      <h1>Volunteer Discord Login</h1>
       <p class="subtitle">
-        Use the same email you confirmed with on <strong>Form No. 2</strong>. We’ll check it against the volunteer list.
+        Use the same gmail/google account you registered with on <strong>Form No. 2</strong>. We’ll check it against the volunteer list.
       </p>
     </section>
 
