--- a/hackathonvolunteer-wiki.html
+++ b/hackathonvolunteer-wiki.html
@@ -230,7 +230,7 @@
   
   <!-- Added link to Code Crunch Donations Guide -->
   <p style="margin-top: 10px;">
-    📘 <a href="https://docs.google.com/document/d/1fiMPj6baHyA9dEk74JuJmQxj_n7d6fJy_OlUBFyAaeE/edit?usp=sharing" target="_blank" rel="noopener">
+    📘 <a href="https://codecrunchglobal.vercel.app/hackathonvolunteer-donationguide.html" target="_blank" rel="noopener">
       View the Code Crunch Donations Guide
     </a>
   </p>
