--- a/hackuniversity-internship.html
+++ b/hackuniversity-internship.html
@@ -18,9 +18,11 @@
     </div>
   </nav>
 
+  <!-- Header -->
   <header class="bg-blue-700 text-white py-6 text-center">
     <h1 class="text-4xl font-bold">Code Crunch x Hacking University Internship Program</h1>
     <p class="mt-2 text-lg">Empowering students from all majors through GenAI and research</p>
+
     <div class="mt-2 text-sm">
       <p class="mt-1">Part of the <strong>Hack University Regional Group</strong> family:</p>
       <ul class="flex flex-wrap justify-center gap-4 mt-2 text-white underline text-sm">
@@ -34,24 +36,30 @@
     </div>
   </header>
 
+  <!-- Main Content -->
   <main class="max-w-6xl mx-auto px-4 py-10">
+
     <!-- Overview -->
     <section class="mb-12">
       <h2 class="text-3xl font-semibold mb-4">Program Overview</h2>
-      <p class="text-lg">The Code Crunch Internship Program is a 10-week remote or hybrid initiative designed to engage students from diverse majors—including Business, Nursing, Psychology, Criminal Justice, Finance, Behavioral Science, Data Science, Cybersecurity, Artificial Intelligence, Cloud Computing, Software Engineering, Civil Engineering, Biomedical Engineering, Computer Engineering, Electrical Engineering, and more—in solving real-world challenges using GenAI and research-based strategies. It is offered in both English and Spanish and open to students across the U.S., Latin America, and beyond.</p>
+      <p class="text-lg">
+        The Code Crunch Internship Program is a 10-week remote or hybrid initiative designed to engage students from diverse majors — including Business, Nursing, Psychology, Criminal Justice, Finance, Behavioral Science, Data Science, Cybersecurity, Artificial Intelligence, Cloud Computing, Software Engineering, Civil Engineering, Biomedical Engineering, Computer Engineering, Electrical Engineering, and more — in solving real-world challenges using GenAI and research-based strategies.
+        It is offered in both English and Spanish and open to students across the U.S., Latin America, and beyond.
+      </p>
     </section>
 
     <!-- For Students -->
     <section class="mb-12">
       <h2 class="text-2xl font-bold text-blue-600">For Students</h2>
       <ul class="list-disc pl-6 mt-3 space-y-2">
-        <li>You will be matched with a real company problem or challenge</li>
-        <li>Hack (problem-solve a solution) and design a 10-week roadmap to solve it using GenAI, research, code, or major-specific tools</li>
-        <li>Submit weekly progress every week in two sync meetings, broadcasted and recorded on our YouTube channel through 30-minute presentations</li>
-        <li>Required time commitment: minimum 10 hrs, maximum 20 hrs weekly. Log your work every 10 hours</li>
-        <li>Be available to meet weekly with a mentor for 1 hour and get feedback and guidance</li>
-        <li>Final showcase presentation at the end of the 10 weeks</li>
-        <li><strong>Note:</strong> Program start dates are flexible depending on student, organization, and mentor availability</li>
+        <li>You will be matched with a real company problem or challenge.</li>
+        <li>Hack (problem-solve a solution) and design a 10-week roadmap to solve it using GenAI, research, code, or major-specific tools.</li>
+        <li>Submit weekly progress every week in two sync meetings, broadcasted and recorded on our YouTube channel through 30-minute presentations.</li>
+        <li>Required time commitment: minimum 10 hrs, maximum 20 hrs weekly.</li>
+        <li>Every hour you work in the internship program must be logged. Log your work every 10 hours.</li>
+        <li>Be available to meet weekly with a mentor for 1 hour and get feedback and guidance.</li>
+        <li>Final showcase presentation at the end of the 10 weeks.</li>
+        <li><strong>Note:</strong> Program start dates are flexible depending on student, organization, and mentor availability.</li>
       </ul>
     </section>
 
@@ -59,10 +67,10 @@
     <section class="mb-12">
       <h2 class="text-2xl font-bold text-blue-600">For Companies</h2>
       <ul class="list-disc pl-6 mt-3 space-y-2">
-        <li>Submit real-world problems for students to tackle</li>
-        <li>Receive fresh solutions and proposals from cross-disciplinary interns</li>
-        <li>Support the program with donations to sustain Code Crunch initiatives</li>
-        <li>Recognize and highlight student contributors</li>
+        <li>Submit real-world problems for students to tackle.</li>
+        <li>Receive fresh solutions and proposals from cross-disciplinary interns.</li>
+        <li>Support the program with donations to sustain Code Crunch initiatives.</li>
+        <li>Recognize and highlight student contributors.</li>
       </ul>
     </section>
 
@@ -70,10 +78,10 @@
     <section class="mb-12">
       <h2 class="text-2xl font-bold text-blue-600">For Industry Mentors</h2>
       <ul class="list-disc pl-6 mt-3 space-y-2">
-        <li>Volunteer 1 hour/week to mentor a student</li>
-        <li>Review logs and presentations</li>
-        <li>Offer insights, feedback, and career advice</li>
-        <li>Make a lasting impact in 10 weeks</li>
+        <li>Volunteer 1 hour/week to mentor a student.</li>
+        <li>Review logs and presentations.</li>
+        <li>Offer insights, feedback, and career advice.</li>
+        <li>Make a lasting impact in 10 weeks.</li>
       </ul>
     </section>
 
@@ -81,14 +89,24 @@
     <section class="bg-blue-100 p-6 rounded-lg text-center">
       <h3 class="text-2xl font-semibold mb-4">Ready to Join or Partner With Us?</h3>
       <p class="mb-4">Whether you're a student, company, or mentor—there’s a role for you in building the future through Hacking University.</p>
-      <div class="space-x-4">
-        <a href="#" class="bg-blue-700 text-white px-6 py-2 rounded hover:bg-blue-800">Student Sign-Up</a>
-        <a href="#" class="bg-green-600 text-white px-6 py-2 rounded hover:bg-green-700">Submit a Company Challenge</a>
-        <a href="#" class="bg-purple-600 text-white px-6 py-2 rounded hover:bg-purple-700">Volunteer as a Mentor</a>
+
+      <div class="space-y-4 mt-6">
+        <button class="bg-gray-400 text-white px-6 py-2 rounded cursor-not-allowed" disabled>
+          Student Sign-Up — Opens Friday, Nov 8
+        </button>
+        <button class="bg-gray-400 text-white px-6 py-2 rounded cursor-not-allowed" disabled>
+          Submit a Company Challenge — Opens Nov 8, 2025
+        </button>
+        <button class="bg-gray-400 text-white px-6 py-2 rounded cursor-not-allowed" disabled>
+          Volunteer as a Mentor — Opens Nov 8, 2025
+        </button>
       </div>
+
+      <p class="text-sm text-gray-700 mt-4">Become a <a href="https://hackuniversity.vercel.app" class="text-blue-600 font-semibold hover:underline">Hack University Member (Students)</a> member (Students) or <strong>Partner Member</strong> to stay updated via our mailing list. If the applications open early, we will announce it on all our social media channels. For companies and mentors, reach out via LinkedIn.</p>
     </section>
   </main>
 
+  <!-- Footer -->
   <footer class="bg-gray-800 text-white text-center py-6">
     <p>&copy; 2025 Code Crunch Club at FIU. Built with ❤️ by Brian Bazurto & the Hacking University team.</p>
   </footer>
