--- a/hackuniversity.html
+++ b/hackuniversity.html
@@ -178,6 +178,16 @@
   </p>
 
   <div class="flex flex-col gap-3 space-y-2">
+        <!-- Internship Program -->
+    <a href="https://codecrunchglobal.vercel.app/hackuniversity-internship.html" target="_blank"
+       class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden"
+       aria-label="Join membership for GDG at FIU, Code Crunch Worldwide, ColorStack at FIU, CAHSI at FIU, and Raspberry Pi Code Crunch. Ages 13 and up.">
+      Internship Program
+      <span class="block text-xs opacity-90 mt-1">
+        Ages 18+
+      </span>
+    </a>
+    
     <!-- Membership -->
     <a href="https://codecrunchglobal.vercel.app/hackuniversity-onestopform.html" target="_blank"
        class="btn-primary btn-mobile text-white px-4 py-3 md:px-6 rounded-full font-bold transition-all duration-300 text-decoration-none hover:opacity-90 inline-block touch-target focus-visible will-change-transform backface-hidden"
