--- a/hackuniversity-internship.html
+++ b/hackuniversity-internship.html
@@ -4,7 +4,27 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Code Crunch Internship Program</title>
+  <title>Code Crunch x Hack University Internship Program</title>
+
+  <!-- Primary Meta Tags -->
+  <meta name="title" content="Code Crunch x Hack University Internship Program">
+  <meta name="description" content="A 10-week GenAI-powered internship for students of all majors to solve real company problems. Hosted by Hack University & Code Crunch.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://hackuniversityinternship.vercel.app/">
+  <meta property="og:title" content="Code Crunch x Hack University Internship Program">
+  <meta property="og:description" content="A 10-week GenAI-powered internship for students of all majors to solve real company problems. Hosted by Hack University & Code Crunch.">
+  <meta property="og:image" content="https://hackuniversityinternship.vercel.app/og-cover.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://hackuniversityinternship.vercel.app/">
+  <meta property="twitter:title" content="Code Crunch x Hack University Internship Program">
+  <meta property="twitter:description" content="A 10-week GenAI-powered internship for students of all majors to solve real company problems. Hosted by Hack University & Code Crunch.">
+  <meta property="twitter:image" content="https://hackuniversityinternship.vercel.app/og-cover.png">
+
+  <!-- Styles -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
