--- a/hackathonvolunteer-certificates.html
+++ b/hackathonvolunteer-certificates.html
@@ -197,9 +197,10 @@
            <small>Open certificate portal soon - We are preparing it for you</small>
         </a>
 
-        <a class="portal-btn" href="#">
+        <a class="portal-btn" href="hackathonvolunteer-certificates-empowhermini-10.18.25.html">
           <span>⚡ EmpowHer Mini HackDay — Fall 2025</span>
-          <small>Open certificate portal soon - We are preparing it for you</small>
+          <!-- <small>Open certificate portal soon - We are preparing it for you</small> -->
+          <small>Open certificate portal</small>
         </a>
       </div>
 
