--- a/hackathonvolunteer-certificates.html
+++ b/hackathonvolunteer-certificates.html
@@ -191,13 +191,13 @@
           <small>Open certificate portal</small>
         </a>
 
-        <a class="portal-btn" href="#">
+        <a class="portal-btn" href="https://codecrunchglobal.vercel.app/hackathonvolunteer-certificates-empowher-10.13-20.25.html">
           <span>💪 EmpowHer Hack — Fall 2025</span>
           <!-- <small>Open certificate portal- Comming Soon</small> -->
            <small>Open certificate portal soon - We are preparing it for you</small>
         </a>
 
-        <a class="portal-btn" href="hackathonvolunteer-certificates-empowhermini-10.18.25.html">
+        <a class="portal-btn" href="https://codecrunchglobal.vercel.app/hackathonvolunteer-certificates-empowhermini-10.18.25.html">
           <span>⚡ EmpowHer Mini HackDay — Fall 2025</span>
           <!-- <small>Open certificate portal soon - We are preparing it for you</small> -->
           <small>Open certificate portal</small>
